integrated user-service and restaurant-service
